# ASTRA

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  quickstart.py  requirements.txt
.github/workflows/: test.yml  tests.yml
deploy/terraform/: main.tf  outputs.tf  variables.tf
docs/: ASTRA_ARCHITECTURE.md  EXPORT_SCHEMA.md
src/astra/: __init__.py  cli.py  storage.py
src/astra/alpaca/: __init__.py  client.py  deployer.py  exceptions.py  monitor.py  monitor_loop.py
src/astra/backtest/: __init__.py  cpcv.py  engine.py  features.py  leakage.py  metrics.py  review.py  risk.py
src/astra/broker/: __init__.py  alpaca_provider.py  base.py  factory.py  ibkr_provider.py  tradier_provider.py
src/astra/builder/: __init__.py  config_writer.py  generator.py  sandbox.py  templates.py
src/astra/data/: __init__.py  alphavantage_provider.py  cache.py  factory.py  lseg_client.py  lseg_provider.py  polygon_provider.py  provider.py  yfinance_provider.py
src/astra/export/: __init__.py  packager.py  report.py  validator.py
src/astra/graduation/: __init__.py  certificate.py  gates.py  tracker.py
src/astra/llm/: __init__.py  anthropic_provider.py  errors.py  factory.py  openai_provider.py  provider.py  retry.py
src/astra/notifications/: __init__.py  base.py  email.py  factory.py  slack.py
src/astra/optimizer/: __init__.py  diagnosis.py  engine.py  history.py  proposer.py
src/astra/pipeline/: __init__.py  (+4 more)
tests/: conftest.py  test_alpaca.py  test_backtest_cpcv.py  test_backtest_engine.py  test_backtest_features.py  test_backtest_metrics.py  test_backtest_risk.py  test_backtest_stress.py  test_builder.py  test_cli.py  test_export.py  test_graduation.py  test_init.py  test_integration.py  test_integration_pipeline.py  test_monitor_loop.py  test_optimizer.py  test_pipeline.py  test_planner.py  test_property.py  test_ui_backend.py
(+29 files in other folders)
