[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astra-trading-agent"
version = "0.2.0"
description = "Autonomous Self-learning Trading and Research Agent"
requires-python = ">=3.11"
dependencies = [
    "aurora-trading-research @ git+https://github.com/carltonking/aurora-trading-research@v3.0.0",
    "anthropic>=0.25.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "alpaca-py>=0.20.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "yfinance>=0.2.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "reportlab>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/carltonking/astra-trading-agent"

[tool.setuptools.packages.find]
where = ["src"]
