[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astra-trading-agent"
version = "0.2.0"
description = "Autonomous Self-learning Trading and Research Agent"
requires-python = ">=3.11, <3.14"
dependencies = [
    "anthropic>=0.25.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "alpaca-py>=0.20.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "yfinance>=0.2.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "reportlab>=4.0.0",
    "openai>=1.0.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
lseg = ["lseg-data>=1.0.0"]
ibkr = ["ib_insync>=0.9.0"]
test = [
    "pytest>=8.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.5.0",
    "pyright>=1.1.370",
]
[dependency-groups]
dev = [
    "openai>=1.0.0",
    "pytest>=8.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.5.0",
    "pyright>=1.1.370",
]

[project.urls]
Homepage = "https://github.com/carltonking/astra-trading-agent"

[project.scripts]
astra = "astra.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
